<resources>
    <string name="app_name">Parking Control</string>
    <string name="tv_Bienvenido">Bienvenido a Parking System</string>
    <string name="tv_IniciarSesion">Inicia sesión para empezar</string>
    <string name="et_Usuario">Nombre de usuario</string>
    <string name="et_Password">Contraseña</string>
    <string name="btn_Login">INICIAR SESIÓN</string>
    <string name="lnk_Registrarse">Registrarse</string>
    <string name="img_Auto">imagen auto</string>
    <string name="tv_Registrarse">Registrarse</string>
    <string name="et_Nombre">Nombre</string>
    <string name="et_Correo">Correo Electrónico</string>
    <string name="et_Contrasena">Contraseña</string>
    <string name="et_RepetirContrasena">Repetir Contraseña</string>
    <string name="btn_Registrar">Aceptar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>